--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /venv/
-/count-tasks_log.txt
-/count-tasks.py_log.txt
+count-tasks_log.txt
+count-tasks.py_log.txt
+.gitignore
 
 # https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
