--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /venv/
 count-tasks_log.txt
 count-tasks.py_log.txt
+COUNTmodules/count_gui.py
+
 .gitignore
 
 # https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
@@ -24,3 +26,8 @@ count-tasks.py_log.txt
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+/COUNTmodules/count_gui.py
+
+/about.png
+/COUNTmodules/count_gui.py
+/COUNTmodules/count_gui3.py
