--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /venv/
 count-tasks_log.txt
 count-tasks.py_log.txt
-count_tasks_alpha.py
+unused_bits/count_tasks_alpha.py
 count_tasks_alpha1.py
 /unused_bits
 .gitignore
