--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /venv/
 count-tasks_log.txt
 count-tasks.py_log.txt
-/unused_bits
+/unused_bits/*
 .gitignore
 
 # https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
